@@ -9,7 +9,7 @@ dictionary or an import path.
 
 (c) Holger Krekel and others, 2009
 """
-version = "1.1.1"
+version = "1.1.2"
 
 __version__ = version = version or "1.1.x"
 import py.apipkg
